2010-01-17  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Fix test acoutbs2.test.
	* tests/acoutbs2: In the generated configure.in: add proper calls
	to AC_INIT and AM_INIT_AUTOMAKE, and remove explicit definition of
	PACKAGE and VERSION. Add a call to aclocal before calling automake.
	Updated copyright years.
	* tests/Makefile.am (XFAIL_TESTS): Removed acoutbs2.test.

	Add forgotten test scripts to $(TESTS).
	* tests/Makefile.am (TESTS): Added test scripts present on the
	filesystem, which were erroneously left out from $(TESTS):
	acoutbs2.test, badopt.test, extra2.test.
	(XFAIL_TESTS): Added acoutbs2.test.

2010-01-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Sync auxiliary files from upstream.
	* INSTALL, lib/INSTALL, lib/config.guess, lib/config.sub:
	Sync from upstream.

	Bump copyright years.
	* aclocal.in (write_aclocal, version): Bump copyright years.
	* automake.in (gen_copyright, version): Likewise.
	* doc/automake.texi: Likewise.

	Rotate ChangeLog.
	* ChangeLog.09: New file, rotated from ...
	* ChangeLog: ... here.
	* Makefile.am (EXTRA_DIST): Distribute ChangeLog.09.

-----

Copyright (C) 2010  Free Software Foundation, Inc.

Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.

;; Variables:
;; coding: utf-8
;; End: