@@ -1,5 +1,5 @@
 #!/bin/sh
-# Copyright (C) 1996, 2000, 2001, 2002  Free Software Foundation, Inc.
+# Copyright (C) 1996, 2000, 2001, 2002, 2010  Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -19,6 +19,8 @@
 
 . ./defs || Exit 1
 
+set -e
+
 cat > configure.in << 'END'
 AC_INIT
 AM_INIT_AUTOMAKE(nonesuch, nonesuch)
@@ -29,5 +31,13 @@ END
 : > Makefile.am
 : > zot.in
 
-$ACLOCAL || Exit 1
+$ACLOCAL
+$AUTOCONF
 $AUTOMAKE
+
+./configure
+
+test -f zot || Exit 1
+ls -a | grep '\\' && Exit 1
+
+:
