@@ -19,6 +19,8 @@
 
 . ./defs || Exit 1
 
+set -e
+
 cat > configure.in << 'END'
 AC_INIT
 AM_INIT_AUTOMAKE(nonesuch, nonesuch)
@@ -34,5 +36,13 @@ END
 : > Makefile.am
 : > zot.in
 
-$ACLOCAL || Exit 1
+$ACLOCAL
+$AUTOCONF
 $AUTOMAKE
+
+./configure
+
+test -f zot || Exit 1
+ls -a | grep '\\' && Exit 1
+
+:
