@@ -1,5 +1,12 @@
 2010-01-17  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	Slighty improve tests acoutbs.test and acoutbs2.test.
+	* tests/acoutbs2.test: Enable `errexit' shell flag.  Check that
+	autoconf and configure work, that the file `zot' is created by
+	configure, and that no file containing a backslash in its name is
+	created.
+	* tests/acoutbs.test: Likewise, plus updated copyright years.
+
 	Fix test acoutbs2.test.
 	* tests/acoutbs2: In the generated configure.in: add proper calls
 	to AC_INIT and AM_INIT_AUTOMAKE, and remove explicit definition of
